stageleft_macro/src/quote_impl/snapshots/property_macro_value@macro_tokens.snap
---
source: stageleft_macro/src/quote_impl/mod.rs
expression: "prettyplease::unparse(&wrapped)"
---
fn main() {
    {
        #[allow(unexpected_cfgs, non_local_definitions, clippy::crate_in_macro_def)]
        #[cfg_attr(not(stageleft_macro), macro_export)]
        #[doc(hidden)]
        macro_rules! __stageleft_quote__unspecified__1_0 {
            (
                [add_amount__free = $add_amount__free:expr,] [| acc, x | { * acc += x +
                add_amount__free }]
            ) => {
                { #[allow(non_snake_case)] { let add_amount__free = $add_amount__free; |
                acc, x | { * acc += x + add_amount__free } } }
            };
        }
        move |
            __stageleft_ctx: &_,
            __output: &mut ::stageleft::internal::QuotedOutput,
            __props: &mut _|
        {
            #[allow(unused, non_upper_case_globals, non_snake_case)]
            let add_amount__free = ::stageleft::runtime_support::FreeVariableWithContext::uninitialized(
                &add_amount,
                __stageleft_ctx,
            );
            if true {
                __output
                    .captures
                    .push(::stageleft::internal::Capture {
                        ident: "add_amount__free",
                        tokens: ::stageleft::runtime_support::FreeVariableWithContext::to_tokens(
                            add_amount,
                            __stageleft_ctx,
                        ),
                    });
                __output.module_path = module_path!();
                __output.crate_name = option_env!("STAGELEFT_FINAL_CRATE_NAME")
                    .unwrap_or(env!("CARGO_PKG_NAME"));
                __output.pkg_name = env!("CARGO_PKG_NAME");
                __output.tokens = "| acc , x | { * acc += x + add_amount__free }";
                __output.macro_name = Some("__stageleft_quote__unspecified__1_0");
                __output.relative_paths = &[];
                *__props = Some(
                    stageleft::properties::Property::make_root(__props)
                        .commutative(
                            my_proof!(
                                #[doc = r" why this is commutative"], __target = { | acc, x
                                | { * acc += x + add_amount } }, __captures = [add_amount]
                            ),
                        ),
                );
                ::core::panic!("stageleft: q!() closure completed");
            }
            #[allow(unreachable_code, unused_qualifications)]
            {
                #[allow(unused, non_upper_case_globals, non_snake_case)]
                let add_amount__free = add_amount__free();
                __stageleft_quote__unspecified__1_0!(
                    [add_amount__free = add_amount__free,] [| acc, x | { * acc += x +
                    add_amount__free }]
                )
            }
        }
    }
}
